[package]
name = "odrive_can"
version = "0.1.0"
authors = ["Martti Leppänen <tstm@softcon.fi>"]
edition = "2021"
license = "Apache-2.0"
license-file = "LICENSE-APACHE"
keywords = ["embedded", "odrive", "esp32", "twai", "can"]
categories = ["embedded", "hardware-support", "no-std"]

[dependencies]
esp-hal = { version = "1.0.0-beta.0", features = [ "esp32s3", "unstable" ] }
embedded-can = {version = "0.4.1"}
nb = { version = "1.1.0", features = [] }

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
